force-app/main/default/objects/LLC_BI__Covenant_Compliance__c/fields/LLC_BI__Covenant__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant__c</fullName>
    <description>This field is required. It is automatically populated. It identifies the Covenant associated with the Covenant Compliance record and is automatically populated when creating a new Covenant Compliance.</description>
    <label>Covenant</label>
    <referenceTo>LLC_BI__Covenant__c</referenceTo>
    <relationshipLabel>Covenant Compliance</relationshipLabel>
    <relationshipName>Covenant_Compliance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>