force-app/main/default/objects/LLC_BI__Covenant_Compliance__c/fields/LLC_BI__Evaluated_By__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Evaluated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. It is manually populated. It identifies the user who completed the review of the associated Covenant record.</description>
    <label>Evaluated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Covenant_Compliance</relationshipName>
    <type>Lookup</type>
</CustomField>