force-app/main/default/objects/LLC_BI__Covenant_Compliance__c/fields/LLC_BI__Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Evaluation_Date__c</fullName>
    <description>This field is optional. It is automatically populated. It identifies the date that a Covenant Compliance record was reviewed.</description>
    <label>Evaluation Date</label>
    <type>Date</type>
</CustomField>