force-app/main/default/objects/LLC_BI__Covenant_Compliance__c/fields/LLC_BI__Exception_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exception_Date__c</fullName>
    <description>This field is optional. It is automatiaclly populated. It identifies the date that a Covenant Compliance record was marked as an exception, or will become an exception.</description>
    <inlineHelpText>If there was an exception, the date that the exception occurred</inlineHelpText>
    <label>Exception Date</label>
    <type>Date</type>
</CustomField>