force-app/main/default/objects/LLC_BI__Covenant_Compliance__c/fields/LLC_BI__Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status__c</fullName>
    <description>This field is required. It is manually populated. It identifies the Status of the Covenant Compliance record (e.g., New, Waived, Compliant, etc.).</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>